kasten/pod-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pvc
  namespace: kasten-io
spec:
  containers:
  - name: debug
    image: busybox
    command: ["sleep", "3600"]
    volumeMounts:
    - name: data
      mountPath: /mnt/data
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: pvc-kasten-backup
